--- a/CSS/CSS Friends Part 1/cats.html
+++ b/CSS/CSS Friends Part 1/cats.html
@@ -6,6 +6,7 @@
   <title>App Academy Friends | PHASE 0: Reset</title>
   <link rel="stylesheet" href="css/00-reset.css" type="text/css">
   <link rel="stylesheet" href="css/01-header.css" type="text/css">
+  <link rel="stylesheet" href="css/02-notifications.css" type="text/css">
 </head>
 
 <body>
@@ -17,7 +18,14 @@
       </h1>
 
       <ul class="header-list">
-        <li><a href="#">Notifications</a></li>
+        <li>
+          <a href="#">Notifications <strong class="badge">3</strong></a>
+          <ul class="header-notifications">
+            <li><a href="#">New like from Tommy.</a></li>
+            <li><a href="#">New comment from Tom.</a></li>
+            <li><a href="#">New like from Thomas.</a></li>
+          </ul>
+        </li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
