--- a/CSS/CSS Friends Part 1/cats.html
+++ b/CSS/CSS Friends Part 1/cats.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/00-reset.css" type="text/css">
   <link rel="stylesheet" href="css/01-header.css" type="text/css">
   <link rel="stylesheet" href="css/02-notifications.css" type="text/css">
+  <link rel="stylesheet" href="css/03-layout.css" type="text/css">
 </head>
 
 <body>
@@ -31,6 +32,17 @@
       </ul>
     </nav>
   </header>
+
+  <main class="content">
+    <header class="content-header">
+      <h1>Sennacy The Great</h1>
+      <button class="content-header-add-friend">Add Friend</button>
+    </header>
+
+    <section class="content-sidebar"></section>
+
+    <section class="content-main"></section>
+  </main>
 </body>
 
 </html>
