--- a/CSS/CSS Friends Part 1/cats.html
+++ b/CSS/CSS Friends Part 1/cats.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/01-header.css" type="text/css">
   <link rel="stylesheet" href="css/02-notifications.css" type="text/css">
   <link rel="stylesheet" href="css/03-layout.css" type="text/css">
+  <link rel="stylesheet" href="css/04-footer.css" type="text/css">
+  <link rel="stylesheet" href="css/05-cats.css" type="text/css">
 </head>
 
 <body>
@@ -43,6 +45,21 @@
 
     <section class="content-main"></section>
   </main>
+
+  <footer class="footer">
+
+    <small class="footer-copy">
+      &copy; 2014 App Academy. All rights reserved.
+    </small>
+
+    <ul class="footer-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Privacy</a></li>
+    </ul>
+
+  </footer>
 </body>
 
 </html>
